added svgs, svg imports, reworked build system, reworked file extensions, built the initial DOM handler script, added uuids for players, various other reworks

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
 html{
+    display: flex;
     background-color: aqua;
+}
+.grid{
+    display: grid;
+    grid-auto-flow: row;
+}
+.column{
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: subgrid;
+}
+relative{
+    position: relative;
 }
