--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,14 @@ html{
     display: flex;
     background-color: aqua;
 }
+
+svg, object[type="image/svg+xml"] {
+    width: 100%;
+    height: 100%;
+}
+
+
+
 .grid{
     display: grid;
     grid-auto-flow: row;
@@ -11,6 +19,18 @@ html{
     grid-auto-flow: column;
     grid-template-columns: subgrid;
 }
-relative{
+
+
+
+.grabbable:hover{
+    cursor: grab;
+}
+
+.grabbable > * {
     position: relative;
+    z-index: -100;
+}
+
+.hidden {
+    display: none;
 }
