--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,71 @@
-html{
-    display: flex;
-    background-color: aqua;
+:root {
+  --black-opacity: rgba(0, 0, 0, 0.8);
 }
 
-svg, object[type="image/svg+xml"] {
-    width: 100%;
-    height: 100%;
+body {
+  background-color: darkgoldenrod;
+  display: flex;
+  max-width: 100%;
+  height: auto;
+  padding: 32px;
 }
 
-
-
-.grid{
-    display: grid;
-    grid-auto-flow: row;
-}
-.column{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: subgrid;
+.content {
+  flex: 1 0 0;
 }
 
+.img-container {
+  width: 100%;
+}
 
+img {
+  max-width: 100%;
+  height: auto;
+}
 
-.grabbable:hover{
-    cursor: grab;
+.grids-container {
+  display: grid;
+  grid-auto-flow: column;
+  width: 100%;
+  gap: 64px;
+}
+
+.grid {
+  display: grid;
+  grid-auto-flow: column;
+  aspect-ratio: 1/1;
+  max-width: 100%;
+}
+
+.column {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: subgrid;
+}
+
+button.square {
+  background-color: transparent;
+  border: 1px solid var(--black-opacity);
+  transition: transform 0.3s ease;
+}
+
+button.square:hover {
+  transform: scale(0.7);
+}
+
+button.square:active {
+  transform: scale(0.9);
+}
+
+.grabbable:hover {
+  cursor: grab;
 }
 
 .grabbable > * {
-    position: relative;
-    z-index: -100;
+  position: relative;
+  z-index: 0;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
