--- a/src/style.css
+++ b/src/style.css
@@ -4,29 +4,25 @@
 
 body {
     background-color: darkgoldenrod;
-    display: flex;
-    max-width: 100%;
-    height: auto;
     padding: 32px;
+    display: flex;
+    max-width: 100vw;
+    height: auto;
 }
 
 .content {
-    flex: 1 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 auto;
 }
 
-.img-container {
-    width: 100%;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-.grids-container {
+.grids {
+    flex: 1 1 auto;
     display: grid;
     grid-auto-flow: column;
-    width: 100%;
+    max-width: 100%;
+    height: auto;
     gap: 64px;
 }
 
@@ -34,7 +30,9 @@ img {
     display: grid;
     grid-auto-flow: column;
     aspect-ratio: 1/1;
+    gap: 2px;
     max-width: 100%;
+    height: auto;
 }
 
 .column {
@@ -46,15 +44,27 @@ img {
 button.square {
     background-color: transparent;
     border: 1px solid var(--black-opacity);
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
+    transition: rotate 0.5s ease;
 }
 
 button.square:hover {
-    transform: scale(0.7);
+    transform: scale(0.8);
+    rotate: 45deg;
 }
 
 button.square:active {
-    transform: scale(0.9);
+    transform: scale(0.7);
+    rotate: 0deg;
+}
+
+.img-container {
+    aspect-ratio: 1/1;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 .grabbable:hover {
